--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Martin Elsman's Home Page
+title : Martin Elsman
 tagline: 
 author :
   name : Martin Elsman
